; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_localtime.c_tzload.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_localtime.c_tzload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.state = type { i32 }
%union.local_storage = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tzload(i8* %0, i8* %1, %struct.state* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.state*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %union.local_storage*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.state* %2, %struct.state** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = call %union.local_storage* @malloc(i32 4)
  store %union.local_storage* %12, %union.local_storage** %10, align 8
  %13 = load %union.local_storage*, %union.local_storage** %10, align 8
  %14 = icmp ne %union.local_storage* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @errno, align 4
  store i32 %16, i32* %5, align 4
  br label %27

17:                                               ; preds = %4
  %18 = load i8*, i8** %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load %struct.state*, %struct.state** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load %union.local_storage*, %union.local_storage** %10, align 8
  %23 = call i32 @tzloadbody(i8* %18, i8* %19, %struct.state* %20, i32 %21, %union.local_storage* %22)
  store i32 %23, i32* %11, align 4
  %24 = load %union.local_storage*, %union.local_storage** %10, align 8
  %25 = call i32 @free(%union.local_storage* %24)
  %26 = load i32, i32* %11, align 4
  store i32 %26, i32* %5, align 4
  br label %27

27:                                               ; preds = %17, %15
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local %union.local_storage* @malloc(i32) #1

declare dso_local i32 @tzloadbody(i8*, i8*, %struct.state*, i32, %union.local_storage*) #1

declare dso_local i32 @free(%union.local_storage*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
